--- a/index.html
+++ b/index.html
@@ -3,19 +3,15 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" href="style.css">
-  <title> Vertical Alignment </title>
+  <title>  Page Centering - multiple elements </title>
 </head>
 <body>
-   <div class="container">
-     <div class="item">
-       <h2>Hanna Yang</h2>
-       <p>Front-end software engineer</p>
-       <ul>
-         <li>Contractor @ Axiom Zen</li>
-         <li>Accomplished 3 certificates from freeCodeCamp</li>
-         <li>Completed 15+ front-end projects</li>
-       </ul>
-     </div>
-   </div>
+  <div class="author-meta">
+    <img class="author-image" src="https://i.cartoonnetwork.com/prismo/props/chars/ben17_180x180_0.png" alt="author-photo">
+    <div class="author-info">
+      <p class="author-name"> Written by Hanna Yang</p>
+      <p> <a class="author-email" href="mailto:hannayangyang@gmail.com"> hannayangyang@gmail.com </a></p>
+    </div>
+  </div>
 </body>
 </html>
